@startuml
' Web Layer Class Diagram

package web-layer {
    class ScMowerApplication <<Application>>
    class RootRedirectController <<Controller>>
    class GlobalExceptionHandler <<ControllerAdvice>>
    class MowerEngineV1Controller <<RestController>>
}

package adapter-layer {
    class MowerEngineIOParser <<Object>>
}

' Relationships
ScMowerApplication --> RootRedirectController : creates
ScMowerApplication --> GlobalExceptionHandler : creates
ScMowerApplication --> MowerEngineV1Controller : creates
MowerEngineV1Controller --> MowerEngineIOParser : uses

@enduml

